force-app/main/default/objects/ChildTemp__c/ChildTemp__c.object-meta.xml
<CustomObject>
    <label>ChildTemp</label>
    <nameField>
        <label>ChildTemp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChildsTemp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>