force-app/main/default/objects/ChildTemp__c/fields/ParentTemp__c.field-meta.xml
<CustomField>
    <fullName>ParentTemp__c</fullName>
    <label>ParentTemp</label>
    <referenceTo>ParentTemp__c</referenceTo>
    <relationshipLabel>ChildsTemp</relationshipLabel>
    <relationshipName>ChildsTemp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>