force-app/main/default/objects/ChildTemp__c/fields/RandomText__c.field-meta.xml
<CustomField>
    <fullName>RandomText__c</fullName>
    <label>RandomText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>