force-app/main/default/objects/ChildTemp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>RandomText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>